# zork

./: .gitignore  CMakeLists.txt  CMakePresets.json  FlagSupport.h  README.md  ReadMe.txt  ZorkException.h  act1.cpp  act1.h  act2.cpp  act2.h  act3.cpp  act3.h  act4.cpp  act4.h  adv.cpp  adv.h  ascii_art.cpp  ascii_art.h  b.cpp  b.h  cevent.cpp  cevent.h  chafa_wrapper.cpp  chafa_wrapper.h  clock.h  defs.cpp  defs.h  dung.cpp  dung.h  funcs.cpp  funcs.h  globals.cpp  globals.h  gobject.h  info.cpp  info.h  makefile  makstr.cpp  makstr.h  (+41 more)
scripts/: generate_room_images.py  install_raylib.sh
zork_pics/: bwell.jfif
